styles/style.css
.header {
    display: grid;
    align-items: center;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: auto;
    padding: 92px 0;
    font-size: 18px;
    font-weight: 400;
    font-family: 'Raleway', 'Arial', sans-serif;
}

.logo-header {
    width: 137px;
    margin-left: 70px;
    grid-area: 1 / 2 / 2 / 3;
}

.address {
    display: block;
    margin-left: 188px;
    margin-bottom: 10px;
    font-style: normal;
}

.header-address {
    grid-area: 1 / 3 / 2 / 4;
}

.address_list {
    display: flex;
    margin-bottom: 5px;
    flex-direction: column;
    list-style-type: none;
    gap: 5px;
    text-underline-offset: 4px;
}

.address-text {
margin-right: 100px;
}

.nav {
    grid-area: 1 / 1 / 2 / 2;
    margin-left: 30px;
    margin-bottom: 5px;

}

.nav_list {
    display: flex;
    gap: 14px;
    margin-right: 48px;
    text-underline-offset: 4px;
    flex-shrink: 0;
}

.nav_list li:has(.menu-link-active) {
    list-style-type: none;
    text-decoration: none;
}

.nav_list li {
    flex: 0 0 auto;
}

.nav_item {
    list-style-type: circle;
    list-style-position: outside;
    margin-left: 20px;
}

.nav_item-active {
    list-style-type: none;
}

.nav_item-active .menu-link {
    text-decoration: none;
}



.menu-link {
    text-decoration: underline;
    font-family: 'Raleway', sans-serif;


}





/* hero */

.container {
    margin: 0 auto;
    box-sizing: border-box;
    font-family: 'Raleway', 'Arial', sans-serif;
}


.hero {
    min-height: 757px;
    margin-bottom: 180px;
    position: relative;
    background-image: url("../images/cover.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.overlay {
    position: absolute;
    inset: 0;
    background-color: rgba(0, 0, 0, 0.6);
    z-index: 1;
}

.hero-content {
    position: relative;
    z-index: 2;
}


.grid {
    display: grid;
    grid-template-columns: 330px 1fr 1fr;
    margin: 0 50px;
    padding-top: 165px;
}

.cover-title--word-left {
    grid-area: 1 / 1 / 2 / 2;
}

.cover-title--word-center {
    margin-top:20px;
    grid-area: 2 / 2 / 3 / 3;
}

.cover-title--word-right {
    grid-area:   3 / 2 / 4 / 4;
    margin-top: 20px;
    display: block;
    text-align: right;
    margin-right: -0.3em;
}


.cover-title--word {
    color: white;
    gap: 20px;
    font-weight: bold;
    font-size: 100px;
    letter-spacing: 30px;
    text-transform: uppercase;
    line-height: 115px;
}
.hero_text {
    margin-top: 120px;
    color: white;
    max-width: 637px;
    width: 100%;
    font-size: 22px;
    font-family: 'Raleway', 'Arial', sans-serif;
    font-weight: 400;
    text-transform: uppercase;
    word-spacing: 19px;

    grid-area: 4 / 1 / 5 / 3;
}


.hero_button {
    font-family: 'Raleway', 'Arial', sans-serif;
    margin-top: 105px;
    margin-left: 45px;
    width: 256px;
    height: 51px;
    border: 1px white solid;
    background-color: transparent;
    color: white;
    grid-area: 4 / 3 / 5 / 4;
    font-size: 22px;
    line-height: 46px;
    text-transform: uppercase;
}
/* lots */
.lots {
    color: #fff;
    padding-bottom: 145px;
}

.lot {
    position: relative;
    z-index: 1;
    overflow: hidden;
    min-height: 596px;
    padding: 48px 40px;
    color: #fff;
    background-size: cover;
    background-position: center;
}

.lot .overlay {
    z-index: -1;
}



.lot-title {
    font-family: 'Raleway', 'Arial', sans-serif;
    font-size: 22px;
    font-weight: 700;
    text-transform: uppercase;
    text-decoration: underline;
    border-bottom: none;
    text-decoration-thickness: 1px;
    text-underline-offset: 3px;
    z-index: 1;
}

.lot-text {
    font-family: 'Raleway', 'Arial', sans-serif;
    text-decoration: none;
    font-size: 20px;
    line-height: 24px;
    font-weight: 400;
    z-index: 1;

}

.lots-title {
    font-size: 40px;
    font-weight: bold;
    color: black;
    line-height: 46px;
    text-transform: uppercase;
    margin-left: 65px;
    z-index: 1
}

.lots-ul {
    display: flex;
    flex-wrap: wrap;
    color: white;
    margin-top: 27px;
    margin-left: 24px;
    margin-right: 24px;
    margin-bottom: 30px;
    gap: 25px;
    flex-direction: row;
    list-style: none;
    text-decoration: none;

}

.lots-item {
    display: flex;
    justify-content: space-between;
    box-sizing: border-box;
    width: 334px;
    min-height: 596px;
}

.lot-link {
    position: relative;
    z-index: 2;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    text-decoration: none;
    color: inherit;
    height: 100%;
}


.lot-type-film {
    background-image: url("../images/card-lot-01.jpg");
}

.lot-type-book {
    background-image: url("../images/card-lot-02.jpg");
}

.lot-type-painting {
    background-image: url("../images/card-lot-03.jpg");
}

.lots-a {
    color: black;
    font-size: 20px;
    margin-left: 65px;
    text-underline-offset: 4px;
    text-decoration-thickness: 1px;
}

/* about */

.about {
    font-family: 'Raleway', 'Arial', sans-serif;
    display: grid;
    grid-template-columns: repeat(2, auto);
    grid-template-rows: repeat(3, auto);
    margin-bottom: 158px;
}

.about-title {
    padding: 106px 0 0;
    margin-top: 10px;
    margin-left: 45px;
    font-weight: bold;
    font-size: 40px;
    line-height: 1;
    text-transform: uppercase;
    grid-area: 1 / 2 / 2 / 3;
}


.logo-about {
    margin-top: 10px;
    margin-left: 70px;
    width: 240px;
    height: 240px;
    grid-area: 1 / 1 / 2 / 2;
}

.about-content {
    display: flex;
    flex-direction: column;
    max-width:715px;
    width:100%;
    gap: 25px;
    margin-left: 20px;
    padding-left: 25px;
    padding-top: 7px;
    grid-area: 2 / 2 / 3 / 3;
}


.paragraph-about {
    font-size: 20px;
    line-height: 24px;
}


/* footer */

.footer {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: auto;
    padding-top: 25px;
    font-size: 18px;
    font-weight: 400;
    font-family: 'Raleway', 'Arial', sans-serif;
}

.address-footer {
    margin-left: 52px;
}

.address-list-footer {
    font-style: normal;
    display: flex;
    flex-direction: column;
    list-style-type: none;
    width: 265px;
    gap: 5px;
    text-underline-offset: 4px;
}

.no-decoration {
    text-decoration: none;
}

.nav-footer {
    margin-left: 80px;
}

.nav-list-footer {
    width: 164px;
    margin-right: 20px;
    list-style: none;
    text-align: center;
}


.social {
    margin-left: 65px;
}

.social-list {
    display: flex;
    flex-direction: row;
    gap: 48px;
}

.social-item {
    list-style-type: none;
}

.social-logo {
    width: 48px;
    height: 48px;
}

